load(
    "@rules_lora//lora:defs.bzl",
    "lora_base_model",
    "lora_dataset",
    "lora_merge",
    "lora_recipe",
    "lora_train",
)

# Smoke test exercising all four public macros end-to-end.
# `bazel build //examples/smoke:smoke_jobspec` produces a
# TrainingJobSpec JSON; no actual training happens (the `run`
# subcommand of runpod_orchestrator is v0.1).

lora_dataset(
    name = "tiny_sft",
    src = "sft.jsonl",
    schema = "messages_v1",
    min_examples = 3,
)

lora_recipe(
    name = "tiny_recipe",
    framework = "torchtune",
    rank = 4,
    alpha = 8,
    target_modules = ["q_proj", "v_proj"],
    learning_rate = "5e-4",
    micro_batch_size = 1,
    grad_accum_steps = 1,
    epochs = 1,
)

lora_base_model(
    name = "tiny_base",
    repo = "Qwen/Qwen2.5-0.5B-Instruct",
    revision = "main",
)

lora_train(
    name = "smoke_jobspec",
    base = ":tiny_base",
    recipe = ":tiny_recipe",
    dataset = ":tiny_sft",
    backend = "runpod",
)

# Exercises the lora_merge macro (rule + .run wrapper). No execution
# here — `bazel build //examples/smoke:smoke_merge` just checks the
# rule analyzes and the wrapper script is generated.
lora_merge(
    name = "smoke_merge",
    adapter_dir = "outputs/adapter-smoke_jobspec",
    base = ":tiny_base",
    out_dir = "outputs/merged-smoke",
    # No push_repo here — merge-only, so the smoke build stays
    # side-effect-free. Set push_repo + `bazel run :smoke_merge.run`
    # to also push the merged dir to the hub.
)
