load(
    "@rules_lora//lora:defs.bzl",
    "lora_base_model",
    "lora_dataset",
    "lora_lineage",
    "lora_merge",
    "lora_recipe",
    "lora_train",
)

# Smoke test exercising all four public macros end-to-end.
# `bazel build //examples/smoke:smoke_jobspec` produces a
# TrainingJobSpec JSON; no actual training happens (the `run`
# subcommand of runpod_orchestrator is v0.1).

lora_dataset(
    name = "tiny_sft",
    src = "sft.jsonl",
    min_examples = 3,
    schema = "messages_v1",
)

lora_recipe(
    name = "tiny_recipe",
    alpha = 8,
    epochs = 1,
    framework = "torchtune",
    grad_accum_steps = 1,
    learning_rate = "5e-4",
    micro_batch_size = 1,
    rank = 4,
    target_modules = [
        "q_proj",
        "v_proj",
    ],
)

lora_base_model(
    name = "tiny_base",
    repo = "Qwen/Qwen2.5-0.5B-Instruct",
    revision = "main",
)

lora_train(
    name = "smoke_jobspec",
    backend = "runpod",
    base = ":tiny_base",
    dataset = ":tiny_sft",
    recipe = ":tiny_recipe",
)

# Exercises the lora_merge macro (rule + .run wrapper). No execution
# here — `bazel build //examples/smoke:smoke_merge` just checks the
# rule analyzes and the wrapper script is generated.
lora_merge(
    name = "smoke_merge",
    adapter_dir = "outputs/adapter-smoke_jobspec",
    base = ":tiny_base",
    out_dir = "outputs/merged-smoke",
    # No push_repo here — merge-only, so the smoke build stays
    # side-effect-free. Set push_repo + `bazel run :smoke_merge.run`
    # to also push the merged dir to the hub.
)

# Provenance: trace smoke_jobspec's transitive dataset/recipe/base lineage.
# `bazel build //examples/smoke:smoke_lineage` -> smoke_lineage.lineage.json.
lora_lineage(
    name = "smoke_lineage",
    target = ":smoke_jobspec",
)
